name:                   redis-job-queue-example
synopsis:               Example for redis-job-queue
description:            Example for redis-job-queue
version:                0.1.0
license:                MIT
license-file:           ../LICENSE
author:                 Tero Laitinen
category:               Client
build-type:             Simple
cabal-version:          >=1.8

executable  example
    main-is: main.hs
    build-depends: base >= 4 && < 5
                 , redis-job-queue           
                 , aeson
                 , text


